docs/envoy/v1.6.0/_sources/api-v2/config/filter/http/router/v2/router.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/router/v2/router.proto:

Router
======

Router :ref:`configuration overview <config_http_filters_router>`.

.. _envoy_api_msg_config.filter.http.router.v2.Router:

config.filter.http.router.v2.Router
-----------------------------------

`[config.filter.http.router.v2.Router proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/http/router/v2/router.proto#L12>`_


.. code-block:: json

  {
    "dynamic_stats": "{...}",
    "start_child_span": "...",
    "upstream_log": []
  }

.. _envoy_api_field_config.filter.http.router.v2.Router.dynamic_stats:

dynamic_stats
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether the router generates dynamic cluster statistics. Defaults to
  true. Can be disabled in high performance scenarios.
  
  
.. _envoy_api_field_config.filter.http.router.v2.Router.start_child_span:

start_child_span
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to start a child span for egress routed calls. This can be
  useful in scenarios where other filters (auth, ratelimit, etc.) make
  outbound calls and have child spans rooted at the same ingress
  parent. Defaults to false.
  
  
.. _envoy_api_field_config.filter.http.router.v2.Router.upstream_log:

upstream_log
  (:ref:`config.filter.accesslog.v2.AccessLog <envoy_api_msg_config.filter.accesslog.v2.AccessLog>`) Configuration for HTTP upstream logs emitted by the router. Upstream logs
  are configured in the same way as access logs, but each log entry represents
  an upstream request. Presuming retries are configured, multiple upstream
  requests may be made for each downstream (inbound) request.
  
  

